RESOLVED FIXED105938
DFG inliner should not use the callee's bytecode variable for resolving references to the callee in inlined code
https://bugs.webkit.org/show_bug.cgi?id=105938
Summary DFG inliner should not use the callee's bytecode variable for resolving refer...
Filip Pizlo
Reported 2013-01-02 12:58:06 PST
This makes no sense since the callee is a constant at this point.
Attachments
the patch (8.01 KB, patch)
2013-01-02 12:59 PST, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2013-01-02 12:59:56 PST
Created attachment 181051 [details] the patch
Mark Hahnenberg
Comment 2 2013-01-02 13:06:44 PST
Comment on attachment 181051 [details] the patch r=me
Filip Pizlo
Comment 3 2013-01-02 13:29:59 PST
Note You need to log in before you can comment on or make changes to this bug.