DFG inliner should not use the callee's bytecode variable for resolving references to the callee in inlined code https://bugs.webkit.org/show_bug.cgi?id=105938

Reviewed by Mark Hahnenberg.
        
This simplifies a bunch of code for referring to the callee. It also ought to simplify how we do
closure call inlining: for inlined closure call frames we will simply require that the callee is
already stashed on the stack in the Callee slot in the inline call frame header.

* dfg/DFGByteCodeParser.cpp:
(ByteCodeParser):
(JSC::DFG::ByteCodeParser::getDirect):
(JSC::DFG::ByteCodeParser::get):
(InlineStackEntry):
(JSC::DFG::ByteCodeParser::InlineStackEntry::remapOperand):
(JSC::DFG::ByteCodeParser::handleCall):
(JSC::DFG::ByteCodeParser::handleInlining):
(JSC::DFG::ByteCodeParser::InlineStackEntry::InlineStackEntry):
(JSC::DFG::ByteCodeParser::parse):



git-svn-id: svn://svn.chromium.org/blink/trunk@138641 bbb929c8-8fbe-4397-9dbb-9b2b20218538